--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "jest": "^26.1.0",
     "nodemon": "^2.0.4",
+    "sequelize-cli": "^6.2.0",
     "sqlite3": "^5.0.0",
     "terser-webpack-plugin": "^3.0.7",
     "webpack": "^4.43.0",
