add auth middlwares

--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
 require('dotenv').config({ debug: true })
-const { root_path, config_paths } =  require('../helpers/PathHelper');
+const { root_path, config_path } =  require('./helpers/PathHelper');
 
 module.exports = {
-    'config': config('database.js'),
+    'config': config_path('database.js'),
     'models-path': root_path('app/models'),
     'seeders-path': root_path('database/seeders'),
     'migrations-path': root_path('database/migrations')
