--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   },
   "dependencies": {
     "babel-loader": "^8.1.0",
+    "bcrypt": "^5.0.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sequelize": "^6.3.3"
