--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
   "private": false,
   "scripts": {
     "start": "webpack-dev-server --open --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "start-dev": "nodemon index.js",
+    "migrate": "sequelize-cli db:migrate",
+    "migrate:reset": "sequelize-cli db:migrate:undo:all && yarn run migrate",
+    "test": "DEBUG=express:* NODE_ENV=test jest"
   },
   "dependencies": {
     "babel-loader": "^8.1.0",
     "bcrypt": "^5.0.0",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-validator": "^6.6.0",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -38,6 +45,7 @@
     "nodemon": "^2.0.4",
     "sequelize-cli": "^6.2.0",
     "sqlite3": "^5.0.0",
+    "supertest": "^4.0.2",
     "terser-webpack-plugin": "^3.0.7",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
