--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
+    "start": "yarn run buildcss & webpack && nodemon public/index.js",
+    "buildcss": "postcss resources/css/*.css --base --dir public/css --env=dev --watch",
+    "watch": "yarn run buildcss & webpack --w --mode development",
     "build": "webpack --mode production",
-    "start-dev": "nodemon index.js",
     "migrate": "sequelize-cli db:migrate",
     "migrate:reset": "sequelize-cli db:migrate:undo:all && yarn run migrate",
-    "test": "DEBUG=express:* NODE_ENV=test jest"
+    "pretest": "yarn run migrate:reset",
+    "test": "NODE_ENV=test jest --detectOpenHandles --forceExit"
   },
   "dependencies": {
     "babel-loader": "^8.1.0",
@@ -26,23 +28,31 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.6.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "sequelize": "^6.3.3"
+    "sequelize": "^6.3.3",
+    "tailwindcss": "^1.6.2",
+    "webpack-node-externals": "^2.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "autoprefixer": "^9.8.6",
+    "cssnano": "^4.1.10",
     "eslint": "^7.5.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "jest": "^26.1.0",
     "nodemon": "^2.0.4",
+    "postcss": "^7.0.32",
+    "postcss-cli": "^7.1.1",
     "sequelize-cli": "^6.2.0",
     "sqlite3": "^5.0.0",
     "supertest": "^4.0.2",
