--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ STATIC_PATH='public'
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
+DB_DATABASE=db_name
+DB_USERNAME=travis
 DB_PASSWORD=
-DB_DATABASE_TEST=
+DB_DATABASE_TEST=imagel_testing
