add APP_KEY to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 APP_NAME=application_name
 APP_PORT=8080
+APP_KEY=QIogtAsd12gwF3fd25fdG
 VIEWS_PATH='resources/views'
 VIEW_ENGINE=ejs
 STATIC_PATH='public'
