--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "seed": "NODE_ENV=test sequelize-cli db:seed:all",
     "migrate:reset": "sequelize-cli db:migrate:undo:all && yarn run migrate",
     "pretest": "NODE_ENV=test yarn run migrate:reset &&  yarn run seed",
-    "test": "NODE_ENV=test jest -- tests --runInBand --detectOpenHandles --forceExit",
+    "test": "NODE_ENV=test jest -- tests --detectOpenHandles --forceExit",
     "coverage": "npm run pretest && jest -- tests --coverage"
   },
   "dependencies": {
