--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_NAME=application_name
 APP_PORT=8080
-APP_KEY=QIogtAsd12gwF3fd25fdG
+APP_KEY=QI10ogtAsd12gwF3fd25fdG
 VIEWS_PATH='resources/views'
 VIEW_ENGINE=ejs
-STATIC_PATH='public'
+STATIC_PATH=public
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
