debug travis ci failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ services:
   - mysql
 before_script:
   - cp .env.example .env
+  - mkdir public/storage
+  - mkdir public/uploads
   - mysql -e 'CREATE DATABASE IF NOT EXISTS imagel_testing;'
 script: yarn test
 after_success: yarn run coverage
