Add image List on index,home page and fix menu
show Image lists index,home pages ,fix menu
and add logo to it.

--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "scripts": {
     "start": "yarn run buildcss & webpack && nodemon public/index.js",
     "buildcss": "postcss resources/css/*.css --base --dir public/css --env=dev --watch",
-    "watch": "yarn run buildcss & webpack --w --mode development",
+    "watch": "yarn run buildcss & nodemon public/index.js -w & webpack --w --mode development",
     "build": "webpack --mode production",
     "migrate": "sequelize-cli db:migrate",
     "seed": "NODE_ENV=test sequelize-cli db:seed:all",
     "migrate:reset": "sequelize-cli db:migrate:undo:all && yarn run migrate",
     "pretest": "NODE_ENV=test yarn run migrate:reset &&  yarn run seed",
     "test": "NODE_ENV=test jest -- tests --runInBand --detectOpenHandles",
-    "coverage": "NODE_ENV=test yarn run pretest && jest -- tests --coverage"
+    "coverage": "NODE_ENV=test yarn run pretest && jest -- tests --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "dependencies": {
     "babel-loader": "^8.1.0",
@@ -48,11 +48,13 @@
     "@babel/preset-react": "^7.10.4",
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "autoprefixer": "^9.8.6",
+    "coveralls": "^3.1.0",
     "cssnano": "^4.1.10",
-    "eslint": "^7.5.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint": "^7.11.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.1.0",
     "nodemon": "^2.0.4",
     "postcss": "^7.0.32",
