--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ node_modules
 yarn-error.log
 .vscode
 coverage
-public/storage/uploads
-public/js
+public/storage/uploads/*
+public/js/*
+public/css/*
