Change db to postgres and a storage to folder

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,12 @@ STATIC_PATH=public
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=5432
 DB_DATABASE=db_name
 DB_USERNAME=travis
 DB_PASSWORD=
 DB_DATABASE_TEST=imagel_testing
+
+accessKeyId=ACCESS_KEY_ID
+secretAccessKey=SECRET_ACCESS_KEY
+sessionToken=SESSION_TOKEN_IF_ANY
