--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "coverage": "NODE_ENV=test yarn run pretest && jest -- tests --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "dependencies": {
+    "aws-sdk": "^2.918.0",
     "babel-loader": "^8.1.0",
     "bcrypt": "^5.0.0",
     "connect-flash": "^0.1.1",
@@ -33,9 +34,11 @@
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.7.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sequelize": "^6.3.3",
